<resources>
    <string name="app_name">Paziylet</string>
    <string name="home">Бас бет</string>
    <string name="media">Медиа</string>
    <string name="time_namaz">Намаз ўақты</string>
    <string name="questions_answers">Сораў-Жуўап</string>
    <string name="categories">Бөлимлер</string>
    <string name="question_answer">Сораў жуўап</string>
    <string name="questions">Сораўлар</string>
    <string name="my_questions">Мениң сораўларым</string>
    <string name="phone_number">Телефон номер</string>
    <string name="sign_in_dialog_title">Дизимнен өтиң</string>
    <string name="sign_in_dialog_message">Сизиң сораўларыңыз усы бөлимде жыйналып турыўы ушын дизимнен өтиўиңиз керек. Егер дизимнен өтпесеңиз сораўларыңызды "Сораў-жуўап" бөлиминен излеп тапсаңыз болады.</string>
    <string name="sign_in_dialog_positive_button">Дизимнен өтиў</string>
    <string name="sign_in_dialog_negative_button">Аноним сораў бериў</string>
    <string name="please_fill_all_the_fields">Илтимас барлық майданларды толтырың</string>
    <string name="set_question">Сораў бериң</string>
    <string name="sign_in">Дизимнен отиў</string>
    <string name="anonymous_sign_in">Аноним отиў</string>
    <string name="location_permission_title">Permission_title</string>
    <string name="location_permission_message">permission_message</string>
    <string name="permission_is_required">Бул бөлим керекли руқсатларсыз толық ислемеўи мүмкин. Сазламалар айнасын ашып руқсат бериң.</string>
    <string name="permission_required_title">Руқсат керек</string>
    <string name="go_to_settings">Сазламалар</string>
    <string name="cancel">Бийкарлаў</string>
    <string name="no_permission_for_location">Локация ушын руқсат берилмеген</string>
    <string name="your_questions_sended">Сизиң сораўыңыз жиберилди</string>
    <string name="example_phone_number">+998 91 123 45 67</string>
    <string name="confirmation_code_error">Киритилген санларды тескерип шығың</string>
    <string name="input_sms_code">Смс кодты киритиң</string>
    <string name="input_phone_number">Телефон номериңизди толық киритиң</string>
    <string name="fajr">Таң</string>
    <string name="sunrise">Қуяш</string>
    <string name="dhuhr">Песин</string>
    <string name="asr">Намазлыгер</string>
    <string name="maghrib">Шам</string>
    <string name="isha">Қуптан</string>
    <string name="answer_waiting">Жуўап кутилмекте</string>
    <string name="answer_show">Жуўапты көриў</string>
    <string name="answer_no">Жуўап жоқ</string>
    <string name="full_answer">Толық жуўап</string>
    <string name="news">Жаңалықлар</string>
    <string name="iyman">Ийман</string>
    <string name="Namaz">Намаз</string>
    <string name="Zakat">Закат</string>
    <string name="Oraza">Ораза</string>
    <string name="Haj">Хаж</string>
    <string name="iyman_eng">iyman</string>
    <string name="namaz_eng">namaz</string>
    <string name="zakat_eng">zakat</string>
    <string name="oraza_eng">oraza</string>
    <string name="xaj_eng">xaj</string>
    <string name="paziylet_uz">Paziylet.uz</string>
</resources>