<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#37B899"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:id="@+id/ivMechet"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_path_mechet"/>

    <ImageButton
        android:id="@+id/btnCompass"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_compos"
        android:backgroundTint="@color/colorAppBar"/>

    <TextClock
        android:id="@+id/tvDateClock"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        android:textSize="55dp"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivMechet"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDate"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateClock"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvRegion"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivMechet"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintTop_toBottomOf="@id/ivMechet"
        android:layout_width="match_parent"
        android:id="@+id/ivBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_card"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBackground"
        android:backgroundTint="#EDF1F4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_253"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tvTan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimeTan"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/fajr"
            android:background="@drawable/background_tv"
            android:padding="12dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvTimeTan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvTan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tvTan"
            app:layout_constraintBottom_toBottomOf="@id/tvTan"
            android:background="@drawable/background_tv_time"
            android:textColor="@color/white"
            android:padding="12dp"
            android:text="00:00"/>
        <TextView
            android:id="@+id/tvQuyash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimeQuyash"
            app:layout_constraintTop_toBottomOf="@id/tvTan"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/sunrise"
            android:background="@drawable/background_tv"
            android:padding="12dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvTimeQuyash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvTan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tvQuyash"
            app:layout_constraintBottom_toBottomOf="@id/tvQuyash"
            android:background="@drawable/background_tv_time"
            android:textColor="@color/white"
            android:padding="12dp"
            android:text="00:00"/>
        <TextView
            android:id="@+id/tvPesin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimePesin"
            app:layout_constraintTop_toBottomOf="@id/tvQuyash"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/dhuhr"
            android:background="@drawable/background_tv"
            android:padding="12dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvTimePesin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvTan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tvPesin"
            app:layout_constraintBottom_toBottomOf="@id/tvPesin"
            android:background="@drawable/background_tv_time"
            android:textColor="@color/white"
            android:padding="12dp"
            android:text="00:00"/>
        <TextView
            android:id="@+id/tvNamazliger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimeNamazliger"
            app:layout_constraintTop_toBottomOf="@id/tvPesin"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/asr"
            android:background="@drawable/background_tv"
            android:padding="12dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvTimeNamazliger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvTan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tvNamazliger"
            app:layout_constraintBottom_toBottomOf="@id/tvNamazliger"
            android:background="@drawable/background_tv_time"
            android:textColor="@color/white"
            android:padding="8dp"
            android:text="00:00"/>
        <TextView
            android:id="@+id/tvSham"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimeSham"
            app:layout_constraintTop_toBottomOf="@id/tvNamazliger"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/maghrib"
            android:background="@drawable/background_tv"
            android:padding="12dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvTimeSham"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvTan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tvSham"
            app:layout_constraintBottom_toBottomOf="@id/tvSham"
            android:background="@drawable/background_tv_time"
            android:textColor="@color/white"
            android:padding="12dp"
            android:text="00:00"/>
        <TextView
            android:id="@+id/tvQuptan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTimeQuptan"
            app:layout_constraintTop_toBottomOf="@id/tvSham"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/isha"
            android:background="@drawable/background_tv"
            android:padding="12dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tvTimeQuptan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/tvTan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tvQuptan"
            app:layout_constraintBottom_toBottomOf="@id/tvQuptan"
            android:background="@drawable/background_tv_time"
            android:textColor="@color/white"
            android:padding="12dp"
            android:text="00:00"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:elevation="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mk_color="@color/colorAppBar"
        app:mk_type="LineSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>